product_management_service/current-ingress-backup.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/cors-allow-headers":"DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization","nginx.ingress.kubernetes.io/cors-allow-methods":"GET, POST, PUT, PATCH, DELETE, OPTIONS","nginx.ingress.kubernetes.io/cors-allow-origin":"*","nginx.ingress.kubernetes.io/enable-cors":"true","nginx.ingress.kubernetes.io/rate-limit":"100","nginx. [...]
    nginx.ingress.kubernetes.io/cors-allow-headers: DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization
    nginx.ingress.kubernetes.io/cors-allow-methods: GET, POST, PUT, PATCH, DELETE,
      OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rate-limit: "100"
    nginx.ingress.kubernetes.io/rate-limit-window: 1m
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  creationTimestamp: "2025-09-01T02:43:26Z"
  generation: 4
  name: bidr-ingress
  namespace: bidr
  resourceVersion: "1307252"
  uid: 6853300b-afd0-4f67-8e8f-3364cb560ab6
spec:
  ingressClassName: nginx
  rules:
  - host: bidr.local
    http:
      paths:
      - backend:
          service:
            name: product-management-service
            port:
              number: 8000
        path: /products
        pathType: Prefix
      - backend:
          service:
            name: auth-service
            port:
              number: 8000
        path: /api/v1/auth
        pathType: Prefix
      - backend:
          service:
            name: product-management-service
            port:
              number: 8000
        path: /api/v1/products
        pathType: Prefix
      - backend:
          service:
            name: chat-service
            port:
              number: 8000
        path: /api/v1/chat
        pathType: Prefix
      - backend:
          service:
            name: payment-service
            port:
              number: 8000
        path: /api/v1/payment
        pathType: Prefix
      - backend:
          service:
            name: resolution-service
            port:
              number: 8000
        path: /api/v1/resolution
        pathType: Prefix
      - backend:
          service:
            name: notifications-service
            port:
              number: 8000
        path: /api/v1/notifications
        pathType: Prefix
      - backend:
          service:
            name: transactions-service
            port:
              number: 8000
        path: /api/v1/transactions
        pathType: Prefix
      - backend:
          service:
            name: reviews-service
            port:
              number: 8000
        path: /api/v1/reviews
        pathType: Prefix
      - backend:
          service:
            name: auth-service
            port:
              number: 8000
        path: /admin/auth
        pathType: Prefix
      - backend:
          service:
            name: chat-service
            port:
              number: 8000
        path: /admin/chat
        pathType: Prefix
      - backend:
          service:
            name: payment-service
            port:
              number: 8000
        path: /admin/payment
        pathType: Prefix
      - backend:
          service:
            name: resolution-service
            port:
              number: 8000
        path: /admin/resolution
        pathType: Prefix
      - backend:
          service:
            name: product-management-service
            port:
              number: 8000
        path: /admin/products
        pathType: Prefix
      - backend:
          service:
            name: notifications-service
            port:
              number: 8000
        path: /admin/notifications
        pathType: Prefix
      - backend:
          service:
            name: transactions-service
            port:
              number: 8000
        path: /admin/transactions
        pathType: Prefix
      - backend:
          service:
            name: reviews-service
            port:
              number: 8000
        path: /admin/reviews
        pathType: Prefix
      - backend:
          service:
            name: auth-service
            port:
              number: 8000
        path: /health
        pathType: Prefix
      - backend:
          service:
            name: auth-service
            port:
              number: 8000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
